# task9

./: CMakeLists.txt  main.c
subtask1/: subtask1.c  subtask1.h
subtask2/: subtask2.c  subtask2.h
subtask3/: subtask3.c  subtask3.h
subtask4/: subtask4.c  subtask4.h
subtask5/: subtask5.c  subtask5.h
subtask6/: subtask6.c  subtask6.h
subtask7/: subtask7.c  subtask7.h
